# KWS_YES_NO_Recognition

./: .gitignore  CMakeLists.txt  CMakeLists_realtime.txt  README.md  README_CN.md  REALTIME_SETUP.md  audio_preprocessor.c  audio_preprocessor.h  audio_preprocessor_int8_model_data.c  audio_preprocessor_int8_model_data.h  build_cmake.bat  build_realtime.bat  convert_model.py  digits_model.tflite  digits_model_data.c  digits_model_int8.tflite  main.cpp  main_realtime.cpp  micro_speech_quantized_model_data.c  micro_speech_quantized_model_data.h  model_settings.c  model_settings.h  test_wav.bat  wav_file_reader.c  wav_reader.h
colab/: float_model.tflite  model.cc  model.tflite
tflite-micro/signal/src/kiss_fft_wrappers/: kiss_fft_common.h
tflite-micro/tensorflow/lite/micro/: kernel_util_compat.cc
tflite-micro/tensorflow/lite/micro/examples/micro_speech/: micro_model_settings.h  model_data.cc
tflite-micro/tensorflow/lite/micro/examples/micro_speech/models/: micro_speech_quantized.tflite
tflite-micro/tensorflow/lite/micro/examples/micro_speech/train/: train_micro_speech_model.ipynb
